# govtech-csg-xcg-securemodelpkid

./: README.md  pyproject.toml  requirements-dev.txt
src/govtech_csg_xcg/securemodelpkid/: __init__.py  apps.py  helpers.py  model.py
tests/: run_all_tests.sh
tests/app/: apps.py  models.py  tests.py  urls.py  views.py
tests/app/migrations/: 0001_initial.py  0002_data_migration.py
tests/core/: settings.py  settings_with_app.py  settings_with_app_min_length.py  settings_without_app.py  settings_without_app_min_length.py  urls.py
